// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`healingGoldenParity > HoT (Repair Over Time II buff + small heal) 1`] = `
{
  "rounds": [
    {
      "action": "active",
      "activeSelfBuffs": [
        {
          "buffName": "Repair Over Time II",
          "turnsRemaining": 2,
        },
      ],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 2000,
      "didCrit": false,
      "directHeal": 500,
      "effectiveHealing": 0,
      "hotHeal": 1500,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 1,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [
        {
          "buffName": "Repair Over Time II",
          "turnsRemaining": 2,
        },
      ],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 4000,
      "didCrit": false,
      "directHeal": 500,
      "effectiveHealing": 0,
      "hotHeal": 1500,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 2,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [
        {
          "buffName": "Repair Over Time II",
          "turnsRemaining": 2,
        },
      ],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 6000,
      "didCrit": false,
      "directHeal": 500,
      "effectiveHealing": 0,
      "hotHeal": 1500,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 3,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [
        {
          "buffName": "Repair Over Time II",
          "turnsRemaining": 2,
        },
      ],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 8000,
      "didCrit": false,
      "directHeal": 500,
      "effectiveHealing": 0,
      "hotHeal": 1500,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 4,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [
        {
          "buffName": "Repair Over Time II",
          "turnsRemaining": 2,
        },
      ],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 10000,
      "didCrit": false,
      "directHeal": 500,
      "effectiveHealing": 0,
      "hotHeal": 1500,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 5,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [
        {
          "buffName": "Repair Over Time II",
          "turnsRemaining": 2,
        },
      ],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 12000,
      "didCrit": false,
      "directHeal": 500,
      "effectiveHealing": 0,
      "hotHeal": 1500,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 6,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [
        {
          "buffName": "Repair Over Time II",
          "turnsRemaining": 2,
        },
      ],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 14000,
      "didCrit": false,
      "directHeal": 500,
      "effectiveHealing": 0,
      "hotHeal": 1500,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 7,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [
        {
          "buffName": "Repair Over Time II",
          "turnsRemaining": 2,
        },
      ],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 16000,
      "didCrit": false,
      "directHeal": 500,
      "effectiveHealing": 0,
      "hotHeal": 1500,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 8,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [
        {
          "buffName": "Repair Over Time II",
          "turnsRemaining": 2,
        },
      ],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 18000,
      "didCrit": false,
      "directHeal": 500,
      "effectiveHealing": 0,
      "hotHeal": 1500,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 9,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [
        {
          "buffName": "Repair Over Time II",
          "turnsRemaining": 2,
        },
      ],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 20000,
      "didCrit": false,
      "directHeal": 500,
      "effectiveHealing": 0,
      "hotHeal": 1500,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 10,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 2000,
    },
  ],
  "summary": {
    "avgHealingPerRound": 2000,
    "totalCleanses": 0,
    "totalDirectHeal": 5000,
    "totalEffectiveHealing": 0,
    "totalHealing": 20000,
    "totalHotHeal": 15000,
    "totalIncomingDamage": 0,
    "totalOverheal": 20000,
    "totalShield": 0,
    "totalShieldAbsorbed": 0,
  },
}
`;

exports[`healingGoldenParity > charged heal cadence (active 10% + charged 30%) 1`] = `
{
  "rounds": [
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 2,
      "charges": 1,
      "cleanseCount": 0,
      "cumulativeHealing": 1000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 1,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 2,
      "charges": 2,
      "cleanseCount": 0,
      "cumulativeHealing": 2000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 2,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "charged",
      "activeSelfBuffs": [],
      "chargeCount": 2,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 5000,
      "didCrit": false,
      "directHeal": 3000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 3000,
      "round": 3,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 3000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 2,
      "charges": 1,
      "cleanseCount": 0,
      "cumulativeHealing": 6000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 4,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 2,
      "charges": 2,
      "cleanseCount": 0,
      "cumulativeHealing": 7000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 5,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "charged",
      "activeSelfBuffs": [],
      "chargeCount": 2,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 10000,
      "didCrit": false,
      "directHeal": 3000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 3000,
      "round": 6,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 3000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 2,
      "charges": 1,
      "cleanseCount": 0,
      "cumulativeHealing": 11000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 7,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 2,
      "charges": 2,
      "cleanseCount": 0,
      "cumulativeHealing": 12000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 8,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "charged",
      "activeSelfBuffs": [],
      "chargeCount": 2,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 15000,
      "didCrit": false,
      "directHeal": 3000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 3000,
      "round": 9,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 3000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 2,
      "charges": 1,
      "cleanseCount": 0,
      "cumulativeHealing": 16000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 10,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
  ],
  "summary": {
    "avgHealingPerRound": 1600,
    "totalCleanses": 0,
    "totalDirectHeal": 16000,
    "totalEffectiveHealing": 0,
    "totalHealing": 16000,
    "totalHotHeal": 0,
    "totalIncomingDamage": 0,
    "totalOverheal": 16000,
    "totalShield": 0,
    "totalShieldAbsorbed": 0,
  },
}
`;

exports[`healingGoldenParity > lethal pressure (target dies mid-run, flatline + post-death overheal) 1`] = `
{
  "rounds": [
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 500,
      "didCrit": false,
      "directHeal": 500,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 3000,
      "overheal": 500,
      "round": 1,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 500,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 1000,
      "didCrit": false,
      "directHeal": 500,
      "effectiveHealing": 500,
      "hotHeal": 0,
      "incomingDamage": 3000,
      "overheal": 0,
      "round": 2,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 40,
      "targetShieldPool": 0,
      "totalRoundHealing": 500,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 1000,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 0,
      "round": 3,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 0,
      "targetShieldPool": 0,
      "totalRoundHealing": 0,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 1000,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 0,
      "round": 4,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 0,
      "targetShieldPool": 0,
      "totalRoundHealing": 0,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 1000,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 0,
      "round": 5,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 0,
      "targetShieldPool": 0,
      "totalRoundHealing": 0,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 1000,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 0,
      "round": 6,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 0,
      "targetShieldPool": 0,
      "totalRoundHealing": 0,
    },
  ],
  "summary": {
    "avgHealingPerRound": 167,
    "destroyedRound": 2,
    "totalCleanses": 0,
    "totalDirectHeal": 1000,
    "totalEffectiveHealing": 500,
    "totalHealing": 1000,
    "totalHotHeal": 0,
    "totalIncomingDamage": 6000,
    "totalOverheal": 500,
    "totalShield": 0,
    "totalShieldAbsorbed": 0,
  },
}
`;

exports[`healingGoldenParity > plain heal cadence (self-heal, no enemies) 1`] = `
{
  "rounds": [
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 1000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 1,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 2000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 2,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 3000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 3,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 4000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 4,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 5000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 5,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 6000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 6,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 7000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 7,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 8000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 8,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 9000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 9,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 10000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 10,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 1000,
    },
  ],
  "summary": {
    "avgHealingPerRound": 1000,
    "totalCleanses": 0,
    "totalDirectHeal": 10000,
    "totalEffectiveHealing": 0,
    "totalHealing": 10000,
    "totalHotHeal": 0,
    "totalIncomingDamage": 0,
    "totalOverheal": 10000,
    "totalShield": 0,
    "totalShieldAbsorbed": 0,
  },
}
`;

exports[`healingGoldenParity > pressure (declining HP, partial-deficit effective healing) 1`] = `
{
  "rounds": [
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 5000,
      "didCrit": false,
      "directHeal": 5000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 4000,
      "overheal": 5000,
      "round": 1,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 5000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 10000,
      "didCrit": false,
      "directHeal": 5000,
      "effectiveHealing": 4000,
      "hotHeal": 0,
      "incomingDamage": 4000,
      "overheal": 1000,
      "round": 2,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 60,
      "targetShieldPool": 0,
      "totalRoundHealing": 5000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 15000,
      "didCrit": false,
      "directHeal": 5000,
      "effectiveHealing": 4000,
      "hotHeal": 0,
      "incomingDamage": 4000,
      "overheal": 1000,
      "round": 3,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 60,
      "targetShieldPool": 0,
      "totalRoundHealing": 5000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 20000,
      "didCrit": false,
      "directHeal": 5000,
      "effectiveHealing": 4000,
      "hotHeal": 0,
      "incomingDamage": 4000,
      "overheal": 1000,
      "round": 4,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 60,
      "targetShieldPool": 0,
      "totalRoundHealing": 5000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 25000,
      "didCrit": false,
      "directHeal": 5000,
      "effectiveHealing": 4000,
      "hotHeal": 0,
      "incomingDamage": 4000,
      "overheal": 1000,
      "round": 5,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 60,
      "targetShieldPool": 0,
      "totalRoundHealing": 5000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 30000,
      "didCrit": false,
      "directHeal": 5000,
      "effectiveHealing": 4000,
      "hotHeal": 0,
      "incomingDamage": 4000,
      "overheal": 1000,
      "round": 6,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 60,
      "targetShieldPool": 0,
      "totalRoundHealing": 5000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 35000,
      "didCrit": false,
      "directHeal": 5000,
      "effectiveHealing": 4000,
      "hotHeal": 0,
      "incomingDamage": 4000,
      "overheal": 1000,
      "round": 7,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 60,
      "targetShieldPool": 0,
      "totalRoundHealing": 5000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 40000,
      "didCrit": false,
      "directHeal": 5000,
      "effectiveHealing": 4000,
      "hotHeal": 0,
      "incomingDamage": 4000,
      "overheal": 1000,
      "round": 8,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 60,
      "targetShieldPool": 0,
      "totalRoundHealing": 5000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 45000,
      "didCrit": false,
      "directHeal": 5000,
      "effectiveHealing": 4000,
      "hotHeal": 0,
      "incomingDamage": 4000,
      "overheal": 1000,
      "round": 9,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 60,
      "targetShieldPool": 0,
      "totalRoundHealing": 5000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 50000,
      "didCrit": false,
      "directHeal": 5000,
      "effectiveHealing": 4000,
      "hotHeal": 0,
      "incomingDamage": 4000,
      "overheal": 1000,
      "round": 10,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 60,
      "targetShieldPool": 0,
      "totalRoundHealing": 5000,
    },
  ],
  "summary": {
    "avgHealingPerRound": 5000,
    "totalCleanses": 0,
    "totalDirectHeal": 50000,
    "totalEffectiveHealing": 36000,
    "totalHealing": 50000,
    "totalHotHeal": 0,
    "totalIncomingDamage": 40000,
    "totalOverheal": 14000,
    "totalShield": 0,
    "totalShieldAbsorbed": 0,
  },
}
`;

exports[`healingGoldenParity > reactive cleanse on ally crit-repair (crit 50) 1`] = `
{
  "rounds": [
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 1000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 1,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 1,
      "cumulativeHealing": 3000,
      "didCrit": true,
      "directHeal": 2000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 2,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 4000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 3,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 1,
      "cumulativeHealing": 6000,
      "didCrit": true,
      "directHeal": 2000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 4,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 7000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 5,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 1,
      "cumulativeHealing": 9000,
      "didCrit": true,
      "directHeal": 2000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 6,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 10000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 7,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 1,
      "cumulativeHealing": 12000,
      "didCrit": true,
      "directHeal": 2000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 8,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 0,
      "totalRoundHealing": 2000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 13000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 9,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 0,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 1,
      "cumulativeHealing": 15000,
      "didCrit": true,
      "directHeal": 2000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 2000,
      "round": 10,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 0,
      "totalRoundHealing": 2000,
    },
  ],
  "summary": {
    "avgHealingPerRound": 1500,
    "teamTotalHealing": 0,
    "totalCleanses": 5,
    "totalDirectHeal": 15000,
    "totalEffectiveHealing": 0,
    "totalHealing": 15000,
    "totalHotHeal": 0,
    "totalIncomingDamage": 0,
    "totalOverheal": 15000,
    "totalShield": 0,
    "totalShieldAbsorbed": 0,
  },
}
`;

exports[`healingGoldenParity > spike (charged-nuke enemy vs healer shield) 1`] = `
{
  "rounds": [
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 0,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 3000,
      "overheal": 0,
      "round": 1,
      "shield": 25000,
      "shieldAbsorbed": 3000,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "totalRoundHealing": 0,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 0,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 3000,
      "overheal": 0,
      "round": 2,
      "shield": 25000,
      "shieldAbsorbed": 3000,
      "targetHpPct": 100,
      "targetShieldPool": 22000,
      "totalRoundHealing": 0,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 0,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 12000,
      "overheal": 0,
      "round": 3,
      "shield": 25000,
      "shieldAbsorbed": 12000,
      "targetHpPct": 100,
      "targetShieldPool": 44000,
      "totalRoundHealing": 0,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 0,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 3000,
      "overheal": 0,
      "round": 4,
      "shield": 25000,
      "shieldAbsorbed": 3000,
      "targetHpPct": 100,
      "targetShieldPool": 57000,
      "totalRoundHealing": 0,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 0,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 3000,
      "overheal": 0,
      "round": 5,
      "shield": 25000,
      "shieldAbsorbed": 3000,
      "targetHpPct": 100,
      "targetShieldPool": 79000,
      "totalRoundHealing": 0,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 0,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 12000,
      "overheal": 0,
      "round": 6,
      "shield": 25000,
      "shieldAbsorbed": 12000,
      "targetHpPct": 100,
      "targetShieldPool": 97000,
      "totalRoundHealing": 0,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 0,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 3000,
      "overheal": 0,
      "round": 7,
      "shield": 25000,
      "shieldAbsorbed": 3000,
      "targetHpPct": 100,
      "targetShieldPool": 88000,
      "totalRoundHealing": 0,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 0,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 3000,
      "overheal": 0,
      "round": 8,
      "shield": 25000,
      "shieldAbsorbed": 3000,
      "targetHpPct": 100,
      "targetShieldPool": 97000,
      "totalRoundHealing": 0,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 0,
      "didCrit": false,
      "directHeal": 0,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 12000,
      "overheal": 0,
      "round": 9,
      "shield": 25000,
      "shieldAbsorbed": 12000,
      "targetHpPct": 100,
      "targetShieldPool": 97000,
      "totalRoundHealing": 0,
    },
  ],
  "summary": {
    "avgHealingPerRound": 0,
    "totalCleanses": 0,
    "totalDirectHeal": 0,
    "totalEffectiveHealing": 0,
    "totalHealing": 0,
    "totalHotHeal": 0,
    "totalIncomingDamage": 54000,
    "totalOverheal": 0,
    "totalShield": 225000,
    "totalShieldAbsorbed": 54000,
  },
}
`;

exports[`healingGoldenParity > team healing (walked team self-healer) 1`] = `
{
  "rounds": [
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 1000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 1,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 1200,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 2000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 2,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 1200,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 3000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 3,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 1200,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 4000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 4,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 1200,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 5000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 5,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 1200,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 6000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 6,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 1200,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 7000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 7,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 1200,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 8000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 8,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 1200,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 9000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 9,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 1200,
      "totalRoundHealing": 1000,
    },
    {
      "action": "active",
      "activeSelfBuffs": [],
      "chargeCount": 0,
      "charges": 0,
      "cleanseCount": 0,
      "cumulativeHealing": 10000,
      "didCrit": false,
      "directHeal": 1000,
      "effectiveHealing": 0,
      "hotHeal": 0,
      "incomingDamage": 0,
      "overheal": 1000,
      "round": 10,
      "shield": 0,
      "shieldAbsorbed": 0,
      "targetHpPct": 100,
      "targetShieldPool": 0,
      "teamHealing": 1200,
      "totalRoundHealing": 1000,
    },
  ],
  "summary": {
    "avgHealingPerRound": 1000,
    "teamTotalHealing": 12000,
    "totalCleanses": 0,
    "totalDirectHeal": 10000,
    "totalEffectiveHealing": 0,
    "totalHealing": 10000,
    "totalHotHeal": 0,
    "totalIncomingDamage": 0,
    "totalOverheal": 10000,
    "totalShield": 0,
    "totalShieldAbsorbed": 0,
  },
}
`;
